<resources>
    <string name="app_name">SG Safety Mobile</string>
    <string name="activity">Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SG Safety</string>
    <string name="nav_header_subtitle">Your Safety is Our Priority</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Change Username -->
    <string name="resetUsername">"Change Username"</string>
    <string name="UsernamePolicy1">"Requirements: "</string>
    <string name="UsernamePolicy2">"1. You can only use Usernames that have not been used by other existing user"</string>
    <string name="UsernamePolicy3">"2. Username must be at least 8 characters long"</string>
    <string name="enterUsername">"New Username:"</string>
    <string name="submitUser">"Submit"</string>
    <string name="returnManageProfile">"Return to Manage Profile Page"</string>


    <!-- Change Email -->
    <string name="resetEmail">"Edit Email"</string>
    <string name="currentEmail">"hello@gmail.com"</string>
    <string name="edit">"edit"</string>
    <string name="updateEmail">"Update Email"</string>

    <!-- Verify Contact -->
    <string name="verifyContact">"Verify Contact Number"</string>
    <string name="contactNotice">"A One-Time Password (OTP) will be sent via SMS"</string>
    <string name="contactNumber">"Current Contact"</string>
    <string name="sendCode">"Send Code"</string>
    <string name="enterCode">"Enter OTP Code"</string>
    <string name="verifyCode">"Verify Code"</string>

    <!-- Change Password -->
    <string name="currentP">"Current Password"</string>
    <string name="requirementPassword">"Requirement:"</string>
    <string name="requirementPassword1">"1. Contain at least 8 characters"</string>
    <string name="requirementPassword2">"2. Consists of Uppercase and Lowercase alphabets"</string>
    <string name="requirementPassword3">"3. Contains at least 1 digit"</string>
    <string name="requirementPassword4">"3. Contains at least 1 special character (eg. ! , @ , *)"</string>
    <string name="newPassword">"New Password"</string>
    <string name="confirmPassword">"Confirm Password"</string>
    <string name="resetPassword">"Reset"</string>

    <!-- Upload CPR certificate -->
    <string name="updateCPR">"Update CPR Certificate"</string>
    <string name="expiryCPR">"Expiry Date:"</string>
    <string name="noticeCPR1">"You will be liable for the accuracy of submitted information"</string>
    <string name="noticeCPR2">"Submit a valid CPR Certificate:"</string>
    <string name="uploadCPR">"Upload CPR Certificate"</string>
    <string name="submitCPR">"Submit"</string>
    <string name="title_activity_change_password">ChangePassword</string>

</resources>