<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeUsername">

    <TextView
        android:id="@+id/changingPolicy"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/UsernamePolicy1"
        android:textSize="20sp"
        />


    <TextView
        android:id="@+id/changingPolicy1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:text="@string/UsernamePolicy2"/>

    <TextView
        android:id="@+id/changingPolicy2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="95dp"
        android:text="@string/UsernamePolicy3"/>

    <TextView
        android:layout_marginTop="150dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/enterUsername"
        android:textColor="@color/black"/>


    <EditText
        android:id="@+id/plain_text_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="180dp"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_submitUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="#B90E0A"
        android:text="@string/submitUser"
        android:onClick="performUsernameReset"
        android:textColor="@color/black" />


</FrameLayout>
