<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateCPR">



    <!-- Select the expiry date -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/enter_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expiryCPR"
            tools:ignore="MissingConstraints"
            />

        <TextView
            android:id="@+id/notice_CPR1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noticeCPR1"
            app:layout_constraintTop_toBottomOf="@id/enter_date"
            tools:ignore="MissingConstraints"
            />

        <DatePicker
            android:id="@+id/date_Picker"
            android:layout_width="421dp"
            android:layout_height="186dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            app:layout_constraintTop_toBottomOf="@id/notice_CPR1"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- uploading cpr certificate -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@id/constraint1"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/adding_cpr"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/noticeCPR2"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/upload_cpr"
            android:layout_width="208dp"
            android:layout_height="45dp"
            android:text="@string/uploadCPR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/upload_pdf_cpr"
            app:layout_constraintTop_toBottomOf="@id/adding_cpr" />


        <Button
            android:id="@+id/upload_pdf_cpr"
            android:layout_width="208dp"
            android:layout_height="45dp"
            android:layout_marginEnd="204dp"
            android:text="@string/uploadPdfCPR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adding_cpr" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="359dp"
            android:layout_height="244dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upload_cpr"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/pdfText"
            android:layout_width="413dp"
            android:layout_height="37dp"
            android:layout_marginTop="20dp"
            android:textColor="#0047AB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upload_cpr"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/submitting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/submitCPR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>