<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.Activity.ContactNumberActivity">


    <!-- Users to type in their current Mobile number -->


    <!--Enter the verification code that has been generated -->

    <!--Button to send OTP code , need to generate -->


    <!--Submit to verify the code, successful notice if correct, else resend? -->

    <TextView
        android:id="@+id/textView10"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_above="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="28dp"
        android:text="@string/contactNotice"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.337"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <EditText
        android:id="@+id/mobileNum"
        android:layout_width="353dp"
        android:layout_height="49dp"
        android:layout_above="@+id/textView12"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:autofillHints="phone"
        android:hint="@string/contactNumber"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <EditText
        android:id="@+id/inputting_otp"
        android:layout_width="221dp"
        android:layout_height="47dp"
        android:layout_above="@+id/verify_contact"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="182dp"
        android:layout_toStartOf="@+id/btn_sendOTP"
        android:autofillHints="phone"
        android:hint="@string/enterCode"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/verify_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_sendOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/verify_contact"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="178dp"
        android:text="@string/sendCode"
        app:layout_constraintBottom_toTopOf="@+id/verify_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toEndOf="@+id/inputting_otp"
        app:layout_constraintTop_toBottomOf="@+id/mobileNum"
        app:layout_constraintVertical_bias="0.968" />

    <Button
        android:id="@+id/verify_contact"
        android:layout_width="226dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="45dp"
        android:background="@drawable/rounded_login"
        android:text="@string/verifyCode"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mobileNum"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="17dp"
        android:text="Please Enter Your New Contact Number :"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mobileNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/inputting_otp"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="15dp"
        android:text="Please Enter the OTP Code sent to you :"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputting_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</RelativeLayout>